[gd_scene load_steps=21 format=3 uid="uid://b5gigobueilix"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_oinqm"]
[ext_resource type="FontFile" uid="uid://behuf74h25j5t" path="res://GameAssets/DynaPuff/DynaPuff-VariableFont_wdth,wght.ttf" id="1_ugjs1"]
[ext_resource type="Texture2D" uid="uid://8pntxcrwopv7" path="res://Assets/Art/BG_Space.jpg" id="3_8bard"]
[ext_resource type="Texture2D" uid="uid://yv20cwmhlpwh" path="res://Assets/Art/MenuBubble.png" id="5_84j0t"]
[ext_resource type="Texture2D" uid="uid://58hkgo1s8li0" path="res://Assets/Art/Title_Sheet.png" id="5_styjg"]
[ext_resource type="Theme" uid="uid://cfuny4aqpg8r2" path="res://Resources/default_theme.tres" id="6_actju"]
[ext_resource type="AudioStream" uid="uid://cliqi057lxak6" path="res://Assets/Music/MainMenuTheme_Ilman_Introa.mp3" id="7_s2nx6"]

[sub_resource type="Theme" id="Theme_avieb"]
Button/fonts/font = ExtResource("1_ugjs1")
Label/fonts/font = ExtResource("1_ugjs1")

[sub_resource type="AtlasTexture" id="AtlasTexture_72cta"]
atlas = ExtResource("3_8bard")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p14s"]
atlas = ExtResource("3_8bard")
region = Rect2(1920, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejipe"]
atlas = ExtResource("3_8bard")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4y81"]
atlas = ExtResource("3_8bard")
region = Rect2(1920, 1080, 1920, 1080)

[sub_resource type="SpriteFrames" id="SpriteFrames_chcqr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72cta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p14s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejipe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4y81")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_t8ox7"]
atlas = ExtResource("5_styjg")
region = Rect2(0, 0, 630, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2scx"]
atlas = ExtResource("5_styjg")
region = Rect2(630, 0, 630, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_bq2v4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8ox7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2scx")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="Theme" id="Theme_gnr1q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u7ehx"]
atlas = ExtResource("5_styjg")
region = Rect2(0, 0, 630, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_qba2m"]
atlas = ExtResource("5_styjg")
region = Rect2(630, 0, 630, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_a3r2e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7ehx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qba2m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_avieb")
script = ExtResource("1_oinqm")

[node name="bg" type="AnimatedSprite2D" parent="."]
z_index = -10
position = Vector2(960, 540)
sprite_frames = SubResource("SpriteFrames_chcqr")
autoplay = "default"
frame = 2
frame_progress = 0.481552
metadata/_edit_lock_ = true

[node name="GameTitle" type="AnimatedSprite2D" parent="."]
position = Vector2(508, 358)
scale = Vector2(1.425, 1.425)
sprite_frames = SubResource("SpriteFrames_bq2v4")
autoplay = "default"
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer2" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 51.3648
offset_top = -8.86768
offset_right = 301.365
offset_bottom = 91.1323
grow_vertical = 2
rotation = 0.174533

[node name="How_to_play" type="Button" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_gnr1q")
theme_override_font_sizes/font_size = 40
action_mode = 0
text = "How to play"
icon_alignment = 1
expand_icon = true

[node name="VBoxContainer3" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 251.365
offset_top = 111.132
offset_right = 501.365
offset_bottom = 211.132
grow_vertical = 2
rotation = -0.349066

[node name="About_us" type="Button" parent="CanvasLayer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_gnr1q")
theme_override_font_sizes/font_size = 40
action_mode = 0
text = "About us"
icon_alignment = 1
expand_icon = true

[node name="VBoxContainer4" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 91.3648
offset_top = 131.132
offset_right = 341.365
offset_bottom = 231.132
grow_vertical = 2
rotation = 0.279253

[node name="Options" type="Button" parent="CanvasLayer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 8
theme = SubResource("Theme_gnr1q")
theme_override_font_sizes/font_size = 40
action_mode = 0
text = "Settings"
icon_alignment = 1
expand_icon = true

[node name="VBoxContainer5" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 171.365
offset_top = 276.132
offset_right = 421.365
offset_bottom = 376.132
grow_vertical = 2
rotation = -0.0349066

[node name="Quit" type="Button" parent="CanvasLayer/VBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_gnr1q")
theme_override_font_sizes/font_size = 40
action_mode = 0
text = "Quit"
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2

[node name="Title_control" type="Control" parent="CanvasLayer/HBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.3

[node name="title" type="AnimatedSprite2D" parent="CanvasLayer/HBoxContainer/Control/Title_control"]
position = Vector2(277, 250)
scale = Vector2(0.785, 0.785)
sprite_frames = SubResource("SpriteFrames_a3r2e")
autoplay = "default"

[node name="Control6" type="Control" parent="CanvasLayer/HBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control7" type="Control" parent="CanvasLayer/HBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control2" type="Control" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control4" type="Control" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Start_button" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_left = 0.423
anchor_top = 0.531
anchor_right = 0.591
anchor_bottom = 0.723
offset_left = -89.7
offset_top = 12.0001
offset_right = -107.9
offset_bottom = 13.0
rotation = -0.10472
metadata/_edit_group_ = true

[node name="texture_button" type="TextureButton" parent="CanvasLayer/Start_button"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.458
anchor_bottom = 0.458
offset_left = -1045.39
offset_top = -780.458
offset_right = 1354.61
offset_bottom = 719.542
rotation = -0.10472
scale = Vector2(0.285, 0.155)
pivot_offset = Vector2(1200, 750)
size_flags_horizontal = 8
theme = SubResource("Theme_gnr1q")
action_mode = 0
texture_normal = ExtResource("5_84j0t")

[node name="Label" type="Label" parent="CanvasLayer/Start_button"]
layout_mode = 0
offset_left = -22.4469
offset_top = 50.9326
offset_right = 206.553
offset_bottom = 113.933
rotation = -0.10472
scale = Vector2(1.815, 1.815)
theme = ExtResource("6_actju")
text = "Start game!"

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_s2nx6")
volume_db = -12.0
autoplay = true

[connection signal="pressed" from="CanvasLayer/VBoxContainer2/How_to_play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer3/About_us" to="." method="_on_about_us_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer4/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer5/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Start_button/texture_button" to="." method="_on_start_game_pressed"]
